--- a/DD/main/ArchitecturalDesign.tex
+++ b/DD/main/ArchitecturalDesign.tex
@@ -24,7 +24,7 @@ In our case the three tiers will contain the following division:
 \begin{itemize}
     \item \textbf{Presentation tier}: will contain the interfaces showed in the mock-ups, and it will allow the users to send request for creating, deleting, and viewing line-up and booking ticket from them application. It will allow the physical spot to create and print the line-up ticket. It will allow the manager to do query on different kind of data and to interact with the realizing of new ticket and people entrances.
 
-    \item \textbf{Application tier}: will contain the function to manage in real time the queue considering the realizing time of the different kind of tickets, the position of the application-users, the presence of booking tickets. It will also contain the function to handle and to redirect the different kinds of the request on the appropriate component. And also, the function to check the QR code and allow user to enter, the function to build the visual representation of manager query, and the sign-up and login services.
+    \item \textbf{Business tier}: will contain the function to manage in real time the queue considering the realizing time of the different kind of tickets, the position of the application-users, the presence of booking tickets. It will also contain the function to handle and to redirect the different kinds of the request on the appropriate component. And also, the function to check the QR code and allow user to enter, the function to build the visual representation of manager query, and the sign-up and login services.
 
     \item \textbf{Data tier}: will contain the information about the users, their behavior ( tendency to arrive later or early, typical staying time, etc) and all information that could help to improve the accuracy of predictions.
 \end{itemize}
@@ -87,7 +87,7 @@ In the diagram has been reported the external services used by the system:
 \begin{itemize}
     \item \textbf{Presentation tier}: in this tier we have the interfaces for the different users, the application contains all the interfaces and when the user log in the interfaces change to the proper one. For the customers, the interface permits the user to connect to the BookAVisitService, LiningUpService and ControlQueueService. In a similar way the physical spot interface permits it to connect to the Lining up service and to the feature to print. And for the manager the interface, it permits him to connect and use StaticsService, QRCodeCheckingService and ControlQueueService.
 
-    \item \textbf{Application tier}: in this tier we have the application server that manages all the functions of \gls{clup}. Starting from handling all the user request and redirect them to the right service required, to sending request to database to retrieve and record data. Inside this server the function the require more resources are the handling of the request and the scheduling service. Since it requires to schedule first the different kind of user and then if possible, monitor their position in line and compute it to their records of past visit.
+    \item \textbf{Business tier}: in this tier we have the application server that manages all the functions of \gls{clup}. Starting from handling all the user request and redirect them to the right service required, to sending request to database to retrieve and record data. Inside this server the function the require more resources are the handling of the request and the scheduling service. Since it requires to schedule first the different kind of user and then if possible, monitor their position in line and compute it to their records of past visit.
 
     \item \textbf{Data tier}: in this tier the data service handles all the request coming from the application tier. It schedules the different request of transaction from the different services and manages it accordingly. So, it let them store, manage and query data of the Database. The model of DBMS used in this application is the relational one since it is the most well-known and used one. Therefore, there are a lot of tools and \glspl{api} up to date to support the work. It also fits the application requirements since it permits to compute quickly complex queries and help the data organize in a well-structured way. The first especially is needed for the scheduler, since it has to re-compute the data a lot of times during a day.
 \end{itemize}
@@ -265,6 +265,7 @@ The design patterns used by the system are:
     \item \textbf{Producer/consumer}: is used in systems in which there are objects that offer a service and others that use the service. In this particular case, the users' devices are consumers and servers are producers. This design pattern allows to build a scalable and asynchronous system that allows to break the dependency between the producers and the consumers.
     \item \textbf{\gls{mvc}}: is used in two architectural levels. First, in the smartphone application, as reported in figure~\ref{fig:ComponentDiagram}; second, in the entire system as design pattern of the three tiers architecture since it is able to split the presentation tier from the business tier.
     We propose to use this pattern since it is the most common choice and because it has several benefits such as: fast development process, possibility to have multiple views and, having different sub-modules, it allows to modify one component without changes in the others.
+    \item \textbf{Adapter}: is used as design pattern to integrate external services.
 \end{itemize}
 
 
