--- a/DD/main/glossary.tex
+++ b/DD/main/glossary.tex
@@ -13,3 +13,4 @@
 \newacronym{ux}{UX}{User Experience}
 \newacronym{rest}{REST}{Representational State Transfer}
 \newacronym{gui}{GUI}{Graphical User Interface}
+\newacronym{dd}{DD}{Design Document}
