--- a/RASD/main/glossary.tex
+++ b/RASD/main/glossary.tex
@@ -6,3 +6,4 @@
 \newacronym{uml}{UML}{Unified Modeling Language}
 \newacronym{qos}{QoS}{Quality of Service}
 \newacronym{si}{SI}{International System of Units}
+\newacronym{rasd}{RASD}{Requirements Analysis and Specification Document}
