--- a/DD/main/Introduction.tex
+++ b/DD/main/Introduction.tex
@@ -64,7 +64,12 @@ This option requires optionally at people to point out which product categories 
     \item Specification document: "R \& DD Assignment AY2020-2021.pdf".
     \item Slides of the lectures.
     \item \gls{rasd}: "CLup - Customers Line-up Requirements Analysis and Specification Document.pdf"
+	\item \glspl{dd} of past students.
+    \item Google Maps services: "https://cloud.google.com/maps-platform"
+    \item Google Firebase service: "https://firebase.google.com/"
+    \item Architecture styles:\\ "https://docs.microsoft.com/en-us/azure/architecture/guide/architecturestyles/"
 \end{itemize}
+
 
 
 \section{Documents Structure}
