--- a/RASD/main/Introduction.tex
+++ b/RASD/main/Introduction.tex
@@ -152,7 +152,12 @@ For the last main phenomena, the system also predicts the department that are us
 \begin{itemize}
     \item Specification document: "R \& DD Assignment AY2020-2021.pdf".
     \item Slides of the lectures.
+    \item \glspl{rasd} of past students.
+    \item Alloy documentation: "http://alloy.mit.edu/alloy/documentation.html"
+    \item Google Maps services: "https://cloud.google.com/maps-platform"
+    \item Google Firebase service: "https://firebase.google.com/"
 \end{itemize}
+
 
 
 \section{Documents Structure}
