--- a/RASD/main/References.tex
+++ b/RASD/main/References.tex
@@ -3,4 +3,8 @@
 \begin{itemize}
     \item Specification document: "R \& DD Assignment AY2020-2021.pdf".
     \item Slides of the lectures.
+    \item \glspl{rasd} of past students.
+    \item Alloy documentation: "http://alloy.mit.edu/alloy/documentation.html"
+    \item Google Maps services: "https://cloud.google.com/maps-platform"
+    \item Google Firebase service: "https://firebase.google.com/"
 \end{itemize}
