--- a/DD/main/ArchitecturalDesign.tex
+++ b/DD/main/ArchitecturalDesign.tex
@@ -77,7 +77,7 @@ The data tier has been represented by the \textbf{DataLayer} that contains the \
 
 In the diagram has been reported the external services used by the system:
 \begin{itemize}
-    \item \textbf{GroceryStoreService}: to obtain data about customers from the store.
+    \item \textbf{GroceryStoreService}: to obtain data about customers from the store, and it includes the interface of the hardware component of the store.
     \item \textbf{GoogleMapsService}: used to compute the estimated time to arrive to the store from the location of the customer.
     \item \textbf{GoogleFirebaseService}: used to notify customers.
 \end{itemize}
@@ -96,7 +96,7 @@ The application server is connected to both Google services also through a firew
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=1.0\textwidth]{images/deployment_view.png}
+    \includegraphics[width=1.0\textwidth]{images/deployment_view.pdf}
     \caption{Deployment diagram}\label{fig:Deployment diagram}
 \end{figure}
 
@@ -227,7 +227,7 @@ In this section, it is proposed a diagram that shows the different interface and
 The methods here shown are not supposed to be final but to give a hint of their function and suggest a possible way to implement them.
 \begin{figure}[H]
     \centering
-    \includegraphics[width=1.0\textwidth]{images/Component_class_diagram.png}
+    \includegraphics[width=1.0\textwidth]{images/Component_class_diagram.pdf}
     \caption{Component interface diagram.}\label{fig:Component interface diagram}
 \end{figure}
 
