doc structure + rasd new version motivations

--- a/DD/main/Introduction.tex
+++ b/DD/main/Introduction.tex
@@ -73,3 +73,13 @@ This option requires optionally at people to point out which product categories 
 
 
 \section{Documents Structure}
+
+\begin{itemize}
+	\item \textbf{Chapter 1}: this section analyses and describes the problem assigned, and the possible phenomena involved. It briefly describes some general information about the document and the parts that follow.
+	\item \textbf{Chapter 2}: In this section an intensive analysis of the architectural design has been reported. Design choices will be motivated and explained, focusing the attention on the main components of the system and how they dynamically interact.
+	\item \textbf{Chapter 3}: this is an extension of the section \textit{User Interfaces} section from the \gls{rasd}.
+	\item \textbf{Chapter 4}: analyzes the requirements mapping them to the components of the system that allow it to be accomplished.
+	\item \textbf{Chapter 5}: describes the plan for the implementation, integration and test of the system.
+	\item \textbf{Chapter 6}: here we report the effort spent to design this document and how the activities have been divided between the authors.
+	\item \textbf{Chapter 7}: list of references.
+\end{itemize}
