--- a/RASD/main/glossary.tex
+++ b/RASD/main/glossary.tex
@@ -7,3 +7,4 @@
 \newacronym{qos}{QoS}{Quality of Service}
 \newacronym{si}{SI}{International System of Units}
 \newacronym{rasd}{RASD}{Requirements Analysis and Specification Document}
+\newacronym{dd}{DD}{Design Document}
