--- a/RASD/main/Introduction.tex
+++ b/RASD/main/Introduction.tex
@@ -136,11 +136,12 @@ For the last main phenomena, the system also predicts the department that are us
 
 \begin{table}[H]
     \centering
-    \begin{tabular}{ m{0.25\textwidth} | m{0.25\textwidth} }
-        \textbf{Date}     & \textbf{Modifications} \\
+    \begin{tabular}{ m{0.33\textwidth} | m{0.2\textwidth} | m{0.48\textwidth} }
+        \textbf{Date}     & \textbf{Version}	& \textbf{Comment}\\
         \hline
-        December 22, 2020 & First version          \\
-        \today            & Second version
+        December 22, 2020 & First version		&          \\
+        \hline
+        \today            & Second version		& Revision produced during \gls{dd} writing; more references have been added; requirements modification; minor fixes.
     \end{tabular}
     \caption{Revision history table.}
     \label{table:revisionHistory}
@@ -163,10 +164,10 @@ For the last main phenomena, the system also predicts the department that are us
 \section{Documents Structure}
 
 \begin{itemize}
-    \item \textbf{chapter 1}: this section analyses and describes the problem assigned, and the possible phenomena involved. From them it extracts the goals of the application. It also briefly describes some general information about the document and the parts that follow.
-    \item \textbf{chapter 2}: the overall description has been reported here. In this chapter we explain the main functionalities offered by the system describing the product perspective supported by state charts and the class diagram; the user characteristics with the description of the actors that are supposed to use the application and concluding with the domain assumptions that are necessary to achieve the goals.
-    \item \textbf{chapter 3}: in this section it will be shown what was previously reported in the second section but with a higher level of details. In particular it will be shown in more detail the requirements necessary for the application both functional ones, necessary to fulfill a goal, and non-functional ones composed of the interface, functional and design ones.
-    \item \textbf{chapter 4}: in this section will be shown a model of some features of the system made in alloy. This will be mainly shown by the commented code and by images of the result produced by the alloy program.
-    \item \textbf{chapter 5}: here we report the effort spent to design this document and how the activities have been divided between the authors.
-    \item \textbf{chapter 6}: list of references.
+    \item \textbf{Chapter 1}: this section analyses and describes the problem assigned, and the possible phenomena involved. From them it extracts the goals of the application. It also briefly describes some general information about the document and the parts that follow.
+    \item \textbf{Chapter 2}: the overall description has been reported here. In this chapter we explain the main functionalities offered by the system describing the product perspective supported by state charts and the class diagram; the user characteristics with the description of the actors that are supposed to use the application and concluding with the domain assumptions that are necessary to achieve the goals.
+    \item \textbf{Chapter 3}: in this section it will be shown what was previously reported in the second section but with a higher level of details. In particular it will be shown in more detail the requirements necessary for the application both functional ones, necessary to fulfill a goal, and non-functional ones composed of the interface, functional and design ones.
+    \item \textbf{Chapter 4}: in this section will be shown a model of some features of the system made in alloy. This will be mainly shown by the commented code and by images of the result produced by the alloy program.
+    \item \textbf{Chapter 5}: here we report the effort spent to design this document and how the activities have been divided between the authors.
+    \item \textbf{Chapter 6}: list of references.
 \end{itemize}
