--- a/DD/main/ArchitecturalDesign.tex
+++ b/DD/main/ArchitecturalDesign.tex
@@ -85,7 +85,7 @@ The data tier has been represented by the \textbf{DataLayer} that contains the \
 
 In the diagram has been reported the external services used by the system:
 \begin{itemize}
-    \item \textbf{GroceryStoreService}: to obtain data about customers from the store, and it includes the interface of the hardware component of the store.
+    \item \textbf{GroceryStoreService}: to obtain data about customers from the store.
     \item \textbf{GoogleMapsService}: used to compute the estimated time to arrive to the store from the location of the customer.
     \item \textbf{GoogleFirebaseService}: used to notify customers.
 \end{itemize}
